test/src/e2e_vm_tests/test_programs/should_pass/language/enum_init_fn_call/src/main.sw
script;

enum A {
    A: u64,
}

fn main() -> u64 {
    if let A::A(n) = A::A(f()) { n } else { 0 }
}

fn f() -> u64 {
    1
}
